--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "mongodb": "4.17.2",
     "mysql2": "3.9.8",
     "open": "7.3.0",
-    "openid-client": "4.2.2",
+    "openid-client": "^5.7.1",
     "pg": "8.13.3",
     "pluralize": "8.0.0",
     "progress": "2.0.3",
