--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "sequelize": "6.37.5",
     "spinnies": "0.5.1",
     "stdout-stderr": "0.1.13",
-    "superagent": "8.1.2",
+    "superagent": "^10.2.3",
     "tedious": "16.7.1",
     "uuid": "8.0.0",
     "validate-npm-package-name": "3.0.0"
@@ -61,7 +61,7 @@
     "@semantic-release/git": "10.0.1",
     "@swc/core": "1.11.1",
     "@swc/jest": "0.2.37",
-    "@types/jest": "27.0.2",
+    "@types/jest": "^29.5.12",
     "@types/lodash": "4.14.191",
     "@typescript-eslint/eslint-plugin": "^5.9.1",
     "@typescript-eslint/parser": "^5.9.1",
@@ -76,7 +76,7 @@
     "fs-extra": "8.1.0",
     "git-hooks": "1.1.10",
     "husky": "7.0.2",
-    "jest": "27.3.1",
+    "jest": "^30.0.0",
     "lint-staged": "12.3.7",
     "mock-stdin": "1.0.0",
     "nock": "13.5.0",
